--- a/neurohus/frontend/package.json
+++ b/neurohus/frontend/package.json
@@ -11,25 +11,25 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^14.2.15",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "typescript": "^5.6.3",
     "@types/node": "^20.17.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.15",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "lucide-react": "^0.460.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "class-variance-authority": "^0.7.1"
+    "lucide-react": "^0.460.0",
+    "next": "^14.2.15",
+    "postcss": "^8.4.49",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.15",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.15",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8"
   },
